[gd_scene load_steps=22 format=3 uid="uid://7le66cg706ka"]

[ext_resource type="Script" path="res://Scripts/floating_world.gd" id="1_dyskc"]
[ext_resource type="Script" path="res://Scripts/spawn_path.gd" id="1_rdw0o"]
[ext_resource type="PackedScene" uid="uid://dgynl46gj8bqx" path="res://infinite_moving_platform.tscn" id="2_vbpbl"]
[ext_resource type="Script" path="res://Scripts/starting_platform.gd" id="3_orjft"]
[ext_resource type="PackedScene" uid="uid://c017ws7pisoip" path="res://player.tscn" id="4_vmq7h"]
[ext_resource type="Texture2D" uid="uid://dmj02wbepolnu" path="res://Assets/Cave Assets/mainlev_build.png" id="5_a8wwt"]
[ext_resource type="FontFile" uid="uid://cqs2hj0i8jw7b" path="res://Assets/Fonts/Mondobeyondobb-dn3E.otf" id="8_m5rvj"]
[ext_resource type="AudioStream" uid="uid://jt2guxdqacfv" path="res://Assets/Music/carmina.wav" id="8_xiec0"]
[ext_resource type="PackedScene" uid="uid://chsdp8s66n5s" path="res://scrolling_background.tscn" id="9_vtige"]
[ext_resource type="AudioStream" uid="uid://cwgkdqp5rmfwd" path="res://sound effects/movement/slime_jump.wav" id="10_spx0k"]
[ext_resource type="Script" path="res://Scripts/jump_sound.gd" id="11_060ly"]
[ext_resource type="AudioStream" uid="uid://cj381jttila37" path="res://sound effects/movement/double jump.wav" id="12_dq62o"]
[ext_resource type="Script" path="res://Scripts/double_jump_sound.gd" id="12_xqkhc"]
[ext_resource type="Script" path="res://Scripts/landing_sound.gd" id="20_q150l"]
[ext_resource type="AudioStream" uid="uid://dliqlaigefatv" path="res://sound effects/movement/offical land.wav" id="20_v71cv"]
[ext_resource type="AudioStream" uid="uid://svq6iw6ygcwn" path="res://sound effects/begin_end/official scream to boom.wav" id="22_uqhb5"]
[ext_resource type="Script" path="res://Scripts/falling_sound.gd" id="23_7c8vw"]
[ext_resource type="Texture2D" uid="uid://b2l8g2oxpxg4v" path="res://Assets/win_screen.png" id="24_htb5j"]

[sub_resource type="Curve2D" id="Curve2D_kxlxg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 928, 0)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yche"]
size = Vector2(304, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ao08"]
atlas = ExtResource("5_a8wwt")
region = Rect2(755, 48, 170, 16)

[node name="Floating World" type="Node2D"]
script = ExtResource("1_dyskc")

[node name="Scrolling Background" parent="." instance=ExtResource("9_vtige")]

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_kxlxg")
script = ExtResource("1_rdw0o")
platform_scene = ExtResource("2_vbpbl")

[node name="PathFollow2D" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(64, 0)

[node name="Starting Platform" type="StaticBody2D" parent="."]
position = Vector2(-80, -93)
collision_layer = 257
script = ExtResource("3_orjft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Starting Platform"]
position = Vector2(576, 611)
shape = SubResource("RectangleShape2D_5yche")

[node name="Sprite2D" type="Sprite2D" parent="Starting Platform"]
texture_filter = 1
position = Vector2(576, 608)
scale = Vector2(1.865, 1.865)
texture = SubResource("AtlasTexture_2ao08")

[node name="Despawn Timer" type="Timer" parent="Starting Platform"]
wait_time = 5.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("4_vmq7h")]
position = Vector2(496, 483)
scale = Vector2(1.365, 1.365)
platform_on_leave = 2

[node name="Music Player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_xiec0")

[node name="Platform Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.5
offset_top = -132.0
offset_right = 414.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.188874, 0.0186291, 0, 1)
theme_override_fonts/font = ExtResource("8_m5rvj")
theme_override_font_sizes/font_size = 111
text = "Escape  core"

[node name="Start Button" type="Button" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 29.5
offset_right = 99.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.877581, 0.238059, 0, 1)
theme_override_fonts/font = ExtResource("8_m5rvj")
theme_override_font_sizes/font_size = 61
text = "START"

[node name="Label2" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -113.5
offset_right = 817.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
rotation = 0.1309
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.188874, 0.0186291, 0, 1)
theme_override_fonts/font = ExtResource("8_m5rvj")
theme_override_font_sizes/font_size = 61
text = "the"

[node name="Sound Effects" type="Node" parent="."]

[node name="Jump Sound" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("10_spx0k")
volume_db = 0.215
script = ExtResource("11_060ly")

[node name="Double Jump Sound" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("12_dq62o")
volume_db = 2.06
script = ExtResource("12_xqkhc")

[node name="a" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("20_v71cv")
volume_db = -6.118
script = ExtResource("20_q150l")

[node name="Falling Sound" type="AudioStreamPlayer" parent="Sound Effects"]
stream = ExtResource("22_uqhb5")
script = ExtResource("23_7c8vw")

[node name="Win Timer" type="Timer" parent="."]
one_shot = true

[node name="Win Screen" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("24_htb5j")

[node name="Fade Screen" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 568.0

[node name="Win HUD" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Win HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 33.0
offset_right = 350.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_m5rvj")
theme_override_font_sizes/font_size = 101
text = "You Escaped!"

[node name="Replay Button" type="Button" parent="Win HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = 142.5
offset_right = 474.0
offset_bottom = 215.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.877581, 0.238059, 0, 1)
theme_override_fonts/font = ExtResource("8_m5rvj")
theme_override_font_sizes/font_size = 56
text = "play again?"

[connection signal="game_end" from="." to="Scrolling Background" method="_on_floating_world_game_end"]
[connection signal="game_end" from="." to="SpawnPath" method="_on_floating_world_game_end"]
[connection signal="game_end" from="." to="Player" method="_on_floating_world_game_end"]
[connection signal="game_started" from="." to="Scrolling Background" method="_on_floating_world_game_started"]
[connection signal="game_started" from="." to="Starting Platform" method="_on_floating_world_game_started"]
[connection signal="game_started" from="." to="Player" method="_on_floating_world_game_started"]
[connection signal="timeout" from="Starting Platform/Despawn Timer" to="Starting Platform" method="_on_despawn_timer_timeout"]
[connection signal="player_fell_out_of_bounds" from="Player" to="." method="_on_player_player_fell_out_of_bounds"]
[connection signal="player_fell_out_of_bounds" from="Player" to="Sound Effects/Falling Sound" method="_on_player_player_fell_out_of_bounds"]
[connection signal="player_jumped" from="Player" to="Starting Platform" method="_on_player_player_jumped"]
[connection signal="player_jumped" from="Player" to="Sound Effects/Jump Sound" method="_on_player_player_jumped"]
[connection signal="player_jumped" from="Player" to="Sound Effects/Double Jump Sound" method="_on_player_player_jumped"]
[connection signal="player_landed" from="Player" to="Sound Effects/a" method="_on_player_player_landed"]
[connection signal="timeout" from="Platform Timer" to="SpawnPath" method="_on_platform_timer_timeout"]
[connection signal="pressed" from="HUD/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Win Timer" to="." method="_on_win_timer_timeout"]
[connection signal="pressed" from="Win HUD/Replay Button" to="." method="_on_replay_button_pressed"]
